2005-12-18 yo
* The portal type Preference does not need to specify PropertySheets in the portal type, since they are defined in the product.
* Add skins and actions for repository support.

2005-12-18: jérome
* i18n : added Base_FormatDate, updated Base_TranslateString to use mapping.

2005-12-16:
* modify BusinessTemplate_getModifiedObject

2005-12-15 aurel
* Change the name
BusinessTemplate_installationChoice,
BusinessTemplate_diffTwoObjects, TemplateTool_diffBusinessTemplate
to BusinessTemplate_viewInstallationDialog,
BusinessTemplate_viewObjectsDiff, TemplateTool_viewDiff

2005-12-15 yo
* Change the names TemplateTool_downloadBusinessTemplate and TemplateTool_importBusinessTemplate to TemplateTool_viewDownloadBusinessTemplateDialog and  ERP5 Form
TemplateTool_viewImportBusinessTemplateDialog respectively, according to the naming convention.

2005-12-14 yo
* Resource_zGetInventory and Resource_zGetInventoryList must use stock.mirror_node_uid instead of inventory_movement.destionation_uid.

2005-12-14 aurel
* fix naming convention
* set default value of form_id in Base_cancel

2005-12-13 aurel
* Update way of install Business Template
- add Trash type
- modify Workflow_statusModiify
- add Forms and Scripts in erp5_core
* Change in script of rule_interraction_workflow

2005-12-13 romain
* Fix Base_edit (when displaying multiple matrixbox)

2005-12-08 yo
* Fix the LEFT JOIN syntax in Resource_zGetInventory and Resource_zGetInventoryList.

2005-12-08 Kevin
* Transform tuple to list to let ERP5Type_asSecurityGroupId do a sort.

2005-12-07 yo
* New skins: erp5_html.css and  form_html for PDF editing.

2005-12-04 Jean-Paul
* Made a minimal and somehow broken implementation of global search box (top right) to prevent displaying uggly search results. Improving it requires redirection and filtering

2005-11-25 Jérome