@@ -1,0 +1,1 @@
+Copyright (c) 2005 Nexedi SARL
